--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,11 @@ body {
     display:grid;
     grid-template-rows:30px auto;
     height:100%;
+    width:100%;
 }
 html{
     height:100%;
+    width:100%;
 }
 button{
     outline:none;
