--- a/windows/room/css/room.css
+++ b/windows/room/css/room.css
@@ -45,12 +45,20 @@ canvas{
     position:absolute;
     right:0;
     height:200px;
-    width: 200px;
     bottom: 0;
 }
 
 .conversation .participants img{
-    width:100%;
+    height:200%;
+    display: inline-block;
+}
+
+.conversation .participants img[hidden]{
+    display: none;
+}
+
+.conversation .participants img.hidden{
+    display: none;
 }
 
 
