--- a/windows/roomMap/css/roomMap.css
+++ b/windows/roomMap/css/roomMap.css
@@ -55,3 +55,123 @@
 #map{
     width:100%;
 }
+
+.room-card-overlay{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(3px);
+}
+
+.room-card-overlay>div{
+    height:30%;
+    background-color: white;
+    position: absolute;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    padding-left: 25%;
+
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 40% 10% 50%;
+    grid-template-areas: "title people"
+                        "attributes people"
+                        "info info";
+}
+
+.room-card-overlay .thumbnail {
+margin-left: 10px;
+position:absolute;
+top: -40%;
+width: 20%;
+left:0;
+}
+
+.room-card-overlay .thumbnail img{
+width: 100%;
+border: white 10px solid;
+border-radius: 20px;
+}
+
+.room-card-overlay h1{
+font-family: Squada One;
+font-style: normal;
+font-weight: normal;
+font-size: 40px;
+line-height: 42px;
+text-transform: uppercase;
+
+grid-area: title;
+}
+
+.room-card-overlay .attributes{
+    grid-area: attributes;
+}
+.room-card-overlay .attributes small::after{
+    color: white;
+    padding: 2px 10px ;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+.room-card-overlay .attribute-study::after{
+    content: "study";
+    background-color: var(--main-blue);
+}
+.room-card-overlay .attribute-social::after{
+    content: "social";
+    background-color: var(--main-green);
+}
+
+.room-card-overlay .people{
+    grid-area: people;
+    margin-top:-20%;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.room-card-overlay .people .num-people{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 20px;
+    font-size: 18px;
+}
+.room-card-overlay img{
+    margin-right: -10%;
+}
+
+
+
+
+.room-card-overlay p{
+    grid-area: info;
+    color: grey;
+}
+
+
+.room-card-overlay button{
+
+    position: absolute;
+    right: 0px;
+    top:50%;
+    padding: 10px;
+    border-radius: 10px;
+    font-style: normal;
+font-weight: 600;
+font-size: 20px;
+color: white;
+background-color: var(--main-green);
+border-top-right-radius: 0;
+border-bottom-right-radius: 0;
+}
+
+.room-card-overlay{
+    display: none;
+}
+
+.room-card-overlay.visible{
+    display: block;
+}
