--- a/windows/login/css/login.css
+++ b/windows/login/css/login.css
@@ -1,8 +1,8 @@
 .view {
-    background-image: url('../../../assets/img/background_graphic_login.svg');
-    background-size:contain;
+    background-image: url('../../../assets/img/university_aub.jpg');
+    background-size:cover;
     background-repeat:no-repeat;
-    background-position:bottom left;
+    background-position:top left;
 }
 .login-container {
     height: calc(100% + 30px);
