--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,8 @@ button{
     --main-green: #00B494;
     --main-blue: #0082AA;
     --main-red: #EC4B4B;
+    --light-grey: #e9e9e9;
+    --light-green: #caf5ed;
 }
 
 
