--- a/windows/roomMap/css/roomMap.css
+++ b/windows/roomMap/css/roomMap.css
@@ -6,20 +6,17 @@
     position: relative;
 }
 
-.recommended {
-    padding-bottom: 10px;
-}
-
 .default {
     position: relative;
-    background-image: linear-gradient(180deg, rgba(0, 130, 170, 0.01) 0%, rgba(0, 180, 148, 0.37) 100%), url('../assets/Bliss_bldg.png');
+    background-image: linear-gradient(180deg, rgba(0, 130, 170, 0.43) 0%, rgba(0, 180, 148, 0.37) 100%), url('../assets/Bliss_bldg.png');
     background-position: center;
-    height: 400px;
+    height: 350px;
+    background-position-y: bottom;
 }
 
 .default .buildingimg {
     position: relative;
-    top: 30%;
+    top: 28%;
     display: block;
     margin: auto;
     height: 40px;
@@ -30,14 +27,14 @@
     position: relative;
     top: 25%;
     text-align: center;
-    font-size: 150%;
+    font-size: 200%;
 }
 
 .default .search {
     position: absolute;
     background: #FFFFFF;
     left: calc(50% - 150px);
-    top: 50%;
+    top: 65%;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
     border-style: none;
     border-radius: 7px;
@@ -71,7 +68,7 @@
 }
 
 .cards{
-    margin: 0px 30px;
+    margin: 20px 30px;
     width:100%;
 }
 
@@ -88,20 +85,26 @@
 }
 
 .cards .room h1{
+    position: absolute;
+    bottom: 0%;
     font-size: 26px;
     padding-top:10px;
-    padding-left:5px;
+    padding-left:0px;
     width:98%;
 }
 .cards .room h1 img{
-    height:26px;
+    position: relative;
+    height: 30px;
+    width: auto;
     vertical-align:baseline;
+    top: 5px;
+    left: 5px;
 }
 
 .cards .room p{
     position:absolute;
     right:0px;
-    bottom:0px;
+    top:0px;
     font-size: 14px;
     padding-right:10px;
 }
@@ -118,6 +121,7 @@
     margin-left: 30px;
     width: 35px;
     height: 35px;
+    cursor: pointer;
 }
 
 .cardview .label {
@@ -126,6 +130,41 @@
     margin-left: 10px;
     bottom: 7px;
     font-size: 26px;
+}
+
+.cardview .search {
+    position: absolute;
+    right: 3%;
+    top: 1%;
+    background: rgba(196, 196, 196, 0.4);
+    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    border-style: none;
+    width: 250px;
+    height: 30px;
+}
+
+.cardview .search img {
+    position: absolute;
+    top: 5%;
+    left: 3px;
+    height: 25px;
+    width: 25px;
+}
+
+.cardview .search input {
+    top: 25%;
+    position: absolute;
+    left: 30px;
+    border: none;
+    outline: none;
+    background: rgba(0,0,0,0);
+    color: white;
+    width: 87%;
+}
+
+.cardview .search input::placeholder {
+    color: white;
 }
 
 .map{
@@ -166,8 +205,8 @@
 }
 
 #friends-bar-btn {
-    position: absolute;
-    top: 150px;
+    position: fixed;
+    top: 35%;
     right: 0px;
     background-color: white;
     border-radius: 5px 0 0 5px;
