--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,10 @@ button{
     border:none;
 }
 .head{
+    position: relative;
     color:white;
     margin:5px;
-    height:20px;
+    height: 20px;
     -webkit-app-region: drag;
     z-index:10;
 }
@@ -86,6 +87,7 @@ button{
     --main-blue: #0082AA;
     --main-red: #EC4B4B;
     --light-grey: #e9e9e9;
+    --dark-grey: #a9a9a9;
     --light-green: #caf5ed;
 }
 
