--- a/windows/roomMap/css/roomMap.css
+++ b/windows/roomMap/css/roomMap.css
@@ -1,17 +1,26 @@
+
 .view {
     overflow-y: scroll;
     overflow-x: hidden;
-    margin-top: 40px;
-    height: 94%;
+    margin-top: 10px;
+    height: 100%;
     position: relative;
+}
+
+.recommended {
+    display: block;
+    overflow: hidden;
+    transition: 1s;
+    height: 0;
 }
 
 .default {
     position: relative;
-    background-image: linear-gradient(180deg, rgba(0, 130, 170, 0.43) 0%, rgba(0, 180, 148, 0.37) 100%), url('../assets/Bliss_bldg.png');
+    background-image: linear-gradient(180deg, rgba(0, 130, 170, 0.01) 0%, rgba(0, 180, 148, 0.37) 100%), url('../assets/Bliss_bldg.png');
     background-position: center;
     height: 350px;
     background-position-y: bottom;
+    display: none;
 }
 
 .default .buildingimg {
@@ -49,6 +58,7 @@
     padding: 5px 5px 5px 5px;
     height: 35px;
     width: 35px;
+    cursor: pointer;
 }
 
 .default .search input[type="search"] {
@@ -68,7 +78,7 @@
 }
 
 .cards{
-    margin: 20px 30px;
+    margin: 10px 30px;
     width:100%;
 }
 
@@ -113,6 +123,12 @@
     bottom:0px;
     height:22px;
     vertical-align:middle;
+}
+
+.cardview {
+    position: relative;
+    display: none;
+    margin-top: 10px;
 }
 
 .cardview .buildingimg {
@@ -170,6 +186,7 @@
 .map{
     width:100%;
     position: relative;
+    cursor: grab;
 }
 
 #map-name {
@@ -204,218 +221,31 @@
     left: 50px;
 }
 
-#friends-bar-btn {
-    position: fixed;
-    top: 35%;
-    right: 0px;
-    background-color: white;
-    border-radius: 5px 0 0 5px;
-    box-shadow: 0 0 5px black;
-    width: 90px;
-    transition: width 0.2s;
-    z-index: 1;
-}
-#friends-bar-btn:hover {
-    width: 120px;
-    transition: width 0.2s;
-    cursor: pointer;
-}
-#friends-bar-btn p {
-    position: relative;
-    color: var(--main-green);
-    text-align: left;
-    font-size: 75%;
-    margin-left: 10px;
-    margin-right: 10px;
-    opacity: 100%;
-}
-#friends-bar-btn img {
-    position: relative;
-    display: block;
-    margin-top: 15px;
-    margin-bottom: -10px;
-    margin-left: 25px;
-}
-
-#friends-bar {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 2; /* Stay on top */
-    top: 0;
-    right: 0;
-    background-color: white;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    overflow-y: scroll;
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    box-shadow: 0 0 5px black;
-}
-
-#close-btn {
-    cursor: pointer;
+#display-topbar {
     position: absolute;
-    left: 10px;
-    top: 65px;
-    width: 20px;
-    height: 20px;
-}
-
-#friends-bar h1 {
-    position: absolute;
-    right: 50px;
-    color: var(--main-green);
-    font-size: 110%;
-    opacity: 100%;
-    top: 53px;
-}
-
-#friends-icon {
-    position: absolute;
-    right: 10px;
-    top: 60px;
-    width: 30px;
-    height: 30px;
-}
-
-#friends-bar .search {
-    position: relative;
-    margin-top: 50px;
-    margin-bottom: 10px;
-    margin-left: 13px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
-    border-radius: 7px;
-    width: 90%;
-    height: 35px;
-}
-
-#friends-bar .search input {
-    position: absolute;
-    top: 10px;
-    border: none;
-    outline: none;
-    left: 30px;
-    font-size: 85%;
-    width: 85%;
-}
-
-#friends-bar .search input::placeholder {
-    color: #BFBFBF;
-}
-
-#friends-bar .search img {
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 25px;
-    height: 25px;
-}
-
-#friends-bar>p {
-    position: relative;
-    color: var(--main-green);
-    opacity: 100%;
-    font-size: 100%;
-    left: 13px;
-}
-
-#friends-bar > a {
-    position: relative;
-    color: #0082AA;
-    font-size: 80%;
-    left: calc(50% - 40px);
-}
- 
-.friend-entry {
-    position: relative;
-    width: 90%;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    left: 3px;
-    height: 60px;
-    background: #FAFAFA;
-    border-radius: 48px;
-}
-
-.friend-entry .friend-profile {
-    position: relative;
+    right: 35px;
+    top: 0%;
+    background: white;
+    border-radius: 0 0 10px 10px;
     width: 60px;
     height: 60px;
-    background: #0082AA;
-    border-style: none;
-    border-radius: 100%;
-    display: inline-block;
+    transition: height 0.2s;
+    overflow: hidden;
 }
 
-.friend-entry .friend-profile img {
-    height: 52px;
-    width: auto;
+#display-topbar img {
     display: block;
-    margin: auto;
-    padding: 4px 0px 4px 0px;
-}
-
-.friend-entry .name-plate {
-    position: relative;
-    display: inline-block;
-    bottom: 40%;
-    left: 15px;
-}
-
-.friend-entry .name-plate .name {
-    display: inline;
-    font-size: 100%;
-    color: #AEAEAE;
-    font-weight: bold;
-}
-
-.friend-entry .name-plate .status-dot {
-    position: relative;
-    display: inline-block;
+    position: absolute;
     left: 10px;
+    bottom: 10px;
+    height: 40px;
+    width: auto;
 }
 
-.friend-entry .msg,.location {
-    position: absolute;
-    bottom: 30%;
-    cursor: pointer
-}
-
-.friend-entry .msg {
-    right: 45px;
-}
-
-.friend-entry .location {
-    right: 20px;
-}
-
-.friend-entry .accept-request {
-    position: absolute;
-    right: 15px;
-    bottom: 28%;
-    background-color: var(--main-green);
-    border-style: none;
-    border-radius: 30px;
-    color: white;
-    padding: 5px 10px;
-    transition: background-color 0.2s;
-}
-
-.friend-entry .accept-request:hover {
-    background-color: var(--dark-main-green);
+#display-topbar:hover {
+    height: 80px !important;
+    transition: height 0.2s;
     cursor: pointer;
-    transition: background-color 0.2s;
-}
-
-.friend-entry>p {
-    position: absolute;
-    left: 70%;
-    bottom: 0%;
-    font-size: 85%;
-    text-align: center;
-    color: var(--dark-main-green);
 }
 
 .room-card-overlay{
@@ -497,7 +327,7 @@ grid-area: title;
 
 .room-card-overlay .people .friends {
     position: relative;
-    bottom: 70%;
+    bottom: 66%;
     clip-path: inset(0px 0px 20% 0px);
 }
 
