Tiny tweaks to room map appearance
- Added shadow behind room map nameplate
- Profile picture in user hover interface now renders well
- Centered room names on map

--- a/widgets/hover_view/css/user_hover.css
+++ b/widgets/hover_view/css/user_hover.css
@@ -44,6 +44,13 @@
     background-color: var(--main-blue);
 }
 
+#user-hover-view .profileImage img {
+    height: 2.7rem;
+    width: auto;
+    margin: auto;
+    display: block;
+}
+
 #user-hover-view .nameGroup{
     margin-left: 1rem;
 }
