--- a/windows/roomMap/css/roomMap.css
+++ b/windows/roomMap/css/roomMap.css
@@ -196,14 +196,15 @@
 }
 #map-name img {
     position: relative;
-    width: 33px;
-    height: 33px;
+    width: 35px;
+    height: 35px;
 }
 #map-name h1 {
     position: relative;
     left: 10px;
     display: inline;
     font-size: 160%;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #zoom {
@@ -274,28 +275,27 @@
 }
 
 .room-card-overlay .thumbnail {
-margin-left: 10px;
-position:absolute;
-top: -40%;
-width: 20%;
-left:0;
+    margin-left: 10px;
+    position:absolute;
+    top: -40%;
+    width: 20%;
+    left:0;
 }
 
 .room-card-overlay .thumbnail img{
-width: 100%;
-border: white 10px solid;
-border-radius: 20px;
+    width: 100%;
+    border: white 10px solid;
+    border-radius: 20px;
 }
 
 .room-card-overlay h1{
-font-family: Squada One;
-font-style: normal;
-font-weight: normal;
-font-size: 40px;
-line-height: 42px;
-text-transform: uppercase;
-
-grid-area: title;
+    font-family: Squada One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 42px;
+    text-transform: uppercase;
+    grid-area: title;
 }
 
 .room-card-overlay .attributes{
