--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,9 @@ button{
     --main-red: #EC4B4B;
     --light-grey: #e9e9e9;
     --light-green: #caf5ed;
+    --main-gradient-h: linear-gradient(90.76deg, #00836B 0.6%, #006383 99.35%);
+    --main-gradient-v: linear-gradient(0deg, #00836B 0.6%, #006383 99.35%);
+
 }
 
 
