--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-@import url('../node_modules/@fontsource/roboto/latin.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
     background: linear-gradient(90.76deg, #00836B 0.6%, #006383 99.35%);
     margin: 0;
     overflow: hidden;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     display:grid;
