--- a/widgets/friends_bar/css/friends-bar.css
+++ b/widgets/friends_bar/css/friends-bar.css
@@ -1,17 +1,21 @@
 #friends-bar-btn {
     position: fixed;
-    top: 45%;
-    right: 0px;
+    bottom:0;
+    left:0;
     background-color: white;
-    border-radius: 5px 0 0 5px;
-    box-shadow: 0 0 5px black;
-    width: 90px;
-    transition: width 0.2s;
+    box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
+
+    height: 2rem;
+    transition: height 0.2s;
     z-index: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 0.5rem;
 }
 #friends-bar-btn:hover {
-    width: 120px;
-    transition: width 0.2s;
+    height: 2.5rem;
+    transition: height 0.2s;
     cursor: pointer;
 }
 #friends-bar-btn p { 
@@ -26,55 +30,60 @@
 #friends-bar-btn img {
     position: relative;
     display: block;
-    margin-top: 15px;
-    margin-bottom: -10px;
-    margin-left: 25px;
+    height: 1rem;
 }
 
 #friends-bar {
-    height: 100%; 
-    width: 0; 
+    height: 0; 
+    width: 370px; 
     position: fixed; 
     z-index: 2;
-    top: 0;
-    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: white;
     overflow-x: hidden; 
     overflow-y: scroll;
-    padding-top: 60px; 
     transition: 0.5s; 
-    box-shadow: 0 0 5px black;
+    box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
 }
+
+#friends-bar .header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0.5rem;
+}
+#friends-bar .header>div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 
 #close-btn {
     cursor: pointer;
-    position: absolute;
-    left: 10px;
-    top: 65px;
     width: 20px;
     height: 20px;
+    
+    transform: rotate(90deg);
 }
 
 #friends-bar h1 {
-    position: absolute;
-    right: 50px;
     color: var(--main-green);
     font-size: 110%;
     opacity: 100%;
-    top: 53px;
+    padding-right: 0.2rem;
 }
 
 #friends-icon {
-    position: absolute;
-    right: 10px;
-    top: 60px;
     width: 30px;
     height: 30px;
 }
 
 #friends-bar .search {
     position: relative;
-    margin-top: 50px;
+    margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 13px;
     background: #FFFFFF;
