--- a/windows/login/css/login.css
+++ b/windows/login/css/login.css
@@ -1,3 +1,14 @@
+
+body{
+    display: block;
+}
+
+.head{
+    position: absolute;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.47) 0%, rgba(55, 55, 55, 0) 100%);
+}
+
 .view {
     background-image: url('../../../assets/img/university_aub.jpg');
     background-size:cover;
@@ -17,6 +28,7 @@
     align-items: center;
     padding: 0px 20px;
     box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
+    z-index: 10;
 }
 
     .login-container .title {
