--- a/widgets/friends_bar/css/friends-bar.css
+++ b/widgets/friends_bar/css/friends-bar.css
@@ -5,24 +5,31 @@
     background-color: white;
     box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
 
-    height: 2rem;
-    transition: height 0.2s;
+    height: 3em;
+    width: 3em;
+    transition: width 0.2s;
     z-index: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 0 0.5rem;
+    border-radius: 1.5rem;
+    background-color: var(--main-green);
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 1rem;
+    
 }
 #friends-bar-btn:hover {
-    height: 2.5rem;
-    transition: height 0.2s;
+    width: 10rem;
+    transition: width 0.2s;
     cursor: pointer;
 }
 #friends-bar-btn p { 
     position: relative;
-    color: var(--main-green);
+    color: white;
     text-align: left;
-    font-size: 75%;
+    font-size: 1rem;
     margin-left: 10px;
     margin-right: 10px;
     opacity: 100%;
@@ -30,7 +37,7 @@
 #friends-bar-btn img {
     position: relative;
     display: block;
-    height: 1rem;
+    height: 2rem;
 }
 
 #friends-bar {
