--- a/widgets/friends_bar/css/friends-bar.css
+++ b/widgets/friends_bar/css/friends-bar.css
@@ -46,12 +46,14 @@
     position: fixed; 
     z-index: 2;
     bottom: 0;
-    left: 0;
+    left: 1rem;
     background-color: white;
     overflow-x: hidden; 
     overflow-y: scroll;
     transition: 0.5s; 
     box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
 }
 
 #friends-bar .header{
@@ -151,15 +153,15 @@
     margin-top: 10px;
     margin-bottom: 10px;
     left: 3px;
-    height: 60px;
+    height: 2.5rem;
     background: #FAFAFA;
     border-radius: 48px;
 }
 
 .friend-entry .friend-profile {
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 2.5rem;
+    height: 2.5rem;
     background: #0082AA;
     border-style: none;
     border-radius: 100%;
@@ -167,11 +169,12 @@
 }
 
 .friend-entry .friend-profile img {
-    height: 52px;
+    height: 100%;
     width: auto;
     display: block;
     margin: auto;
     padding: 4px 0px 4px 0px;
+    box-sizing: border-box;
 }
 
 .friend-entry .name-plate {
