--- a/windows/room/css/room.css
+++ b/windows/room/css/room.css
@@ -26,20 +26,58 @@ body{
 #room-title{
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    padding: 0;
     padding-left: 1rem;
+    display: inline;
 }
 
-#exit-room, #exit-room img{
-    background: none;
+#exit-room{
+    background: var(--main-red);
     position: absolute;
-    top: 1rem;
-    left: 0;
-    height: 40px;
+    bottom: 0;
+    right: 0;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 1.5rem;
     vertical-align: middle;
     float: right;
-    margin:10px;
+    margin:1rem;
     z-index:20;
+    color:white;
+    display: flex;
+    height: 3rem;
+    width: 3rem;
+    transition: width 0.2s;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 0.5rem;
+    border-radius: 1.5rem;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 1rem;
+    box-shadow: 0px 4px 54px 7px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+}
+
+#exit-room img{
+    height: 2rem;
+}
+
+#exit-room:hover{
+    width: 7rem;
+}
+#exit-room p { 
+    position: relative;
+    color: white;
+    text-align: left;
+    font-size: 1rem;
+    margin-left: 10px;
+    margin-right: 10px;
+    opacity: 100%;
 }
 canvas{
     width:100%;
@@ -62,6 +100,8 @@ canvas{
     height:200%;
     display: inline-block;
 }
+
+
 
 .conversation .participants img[hidden]{
     display: none;
