--- a/windows/roomMap/css/roomMap.css
+++ b/windows/roomMap/css/roomMap.css
@@ -21,33 +21,38 @@ body{
     background-position: center;
     height: 350px;
     background-position-y: bottom;
+    background-size: cover;
 }
 
 .default .buildingimg {
-    position: relative;
-    top: 28%;
+    
     display: block;
     margin: auto;
+    padding-top: 5%;
+    margin-bottom: 0;
     height: 40px;
     width: 40px;
+    opacity: 0.8;
 }
 
 .default h1 {
-    position: relative;
-    top: 25%;
+    padding-top:0rem;
+    margin-top:0;
     text-align: center;
     font-size: 200%;
+    opacity: 0.8;
 }
 
 .default .search {
-    position: absolute;
     background: #FFFFFF;
-    left: calc(50% - 150px);
-    top: 65%;
+    margin:auto;
+    width: 25rem;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
     border-style: none;
     border-radius: 7px;
     height: 45px;
+    opacity: 0.7;
+    transition: width 0.2s;
 }
 
 .default .search img {
@@ -75,6 +80,16 @@ body{
 
 .default .search input[type="search"]::placeholder {
     color: var(--main-green);
+}
+.default:focus-within .buildingimg, .default:focus-within h1{
+    opacity: 1;
+    transform: scale(1.1);
+    transition: transform 0.2s, opacity 0.2s;
+}
+.default:focus-within .search{
+    width: 30rem;
+    opacity:1;
+    transition: width 0.2s, opacity 0.2s;
 }
 
 .cards{
