--- a/css/main.css
+++ b/css/main.css
@@ -196,3 +196,36 @@ button{
     background: var(--light-grey);
 }
  
+/* Tooltip container */
+.tooltip {
+    position: relative;
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    background-color: rgb(177, 177, 177);
+    color: #fff;
+    text-align: center;
+    padding: 0.4rem 1rem;
+    border-radius: 6px;
+    opacity: 0;
+    font-size: 0.7rem;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+
+    transition: opacity 0.5s;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 0.6;
+    transition: opacity 0.5s;
+  }
+
+  .head{
+      z-index: 1000;
+  }
