--- a/windows/settings/css/schedule.css
+++ b/windows/settings/css/schedule.css
@@ -118,3 +118,71 @@ padding-left: 0.5rem;
 font-size: 0.5rem;
 margin: 0;
 }
+
+#course-view{
+    background-color: white;
+    width: 25rem;
+    padding: 2rem;
+    box-sizing: border-box;
+    border-radius: 1rem;
+}
+
+.overlay.hidden{
+    display: none;
+}
+
+
+
+.overlay{
+    position: absolute;
+    left: 0;
+    right:0;
+    top:0;
+    bottom:0;
+    z-index:200;
+    background-color: rgba(61, 61, 61, 0.336);
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    
+}
+
+#course-view h2{
+    font-size: 0.9rem;
+    font-weight: normal;
+    color:var(--main-blue);
+}
+
+#course-view>div>div{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#course-view input{
+    width: 100%;
+}
+
+#course-view button{
+    margin-left: 1rem;
+    background-color: var(--main-green);
+    color:white;
+    padding:0.3rem 0.5rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+
+#course-view .time{
+    width: 60%;
+}
+
+#course-view .time td:nth-child(1),#course-view .time td:nth-child(2),#course-view .time td:nth-child(4),#course-view .time td:nth-child(5){
+    background-color: rgb(235, 235, 235);
+    text-align: center;
+}
+
+#course-view .time td:nth-child(3){
+    width: 3rem;
+}
